usuari registro validado

--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -59,7 +59,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/san_francisco"
-                            android:text="Subir imagen para tu perfil"
+                            android:text="Foto Perfil"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="18sp"
@@ -167,12 +167,11 @@
                                 <com.google.android.material.textfield.TextInputLayout
                                     android:id="@+id/txtInputApellidoPaternoU"
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                                    android:layout_width="0dp"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="10dp"
                                     android:layout_weight="1"
                                     android:hint="Apellido Paterno"
-                                    app:startIconDrawable="@drawable/ic_person">
+                                    app:startIconDrawable="@drawable/baseline_personal_injury_24">
 
                                     <com.google.android.material.textfield.TextInputEditText
                                         android:id="@+id/edtApellidoPaternoU"
@@ -182,6 +181,15 @@
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
 
+                            </LinearLayout>
+
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
                                 <com.google.android.material.textfield.TextInputLayout
                                     android:id="@+id/txtInputApellidoMaternoU"
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -189,7 +197,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:hint="Apellido Materno"
-                                    app:startIconDrawable="@drawable/ic_person">
+                                    app:startIconDrawable="@drawable/baseline_person_add_24">
 
                                     <com.google.android.material.textfield.TextInputEditText
                                         android:id="@+id/edtApellidoMaternoU"
@@ -198,7 +206,9 @@
                                         android:fontFamily="@font/san_francisco"
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
+
                             </LinearLayout>
+
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -210,7 +220,6 @@
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="10dp"
                                     android:layout_weight="1"
                                     android:hint="Tipo Identificación"
                                     app:startIconDrawable="@drawable/ic_tipo_doc">
@@ -224,6 +233,15 @@
                                         android:inputType="none"
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
+
+                            </LinearLayout>
+
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
 
                                 <com.google.android.material.textfield.TextInputLayout
                                     android:id="@+id/txtInputNumeroDocU"
@@ -242,7 +260,38 @@
                                         android:inputType="number"
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
+
                             </LinearLayout>
+
+
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <com.google.android.material.textfield.TextInputLayout
+                                    android:id="@+id/txtInputProvincia"
+                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:hint="Provincia"
+                                    app:startIconDrawable="@drawable/baseline_person_pin_circle_24">
+
+                                    <AutoCompleteTextView
+                                        android:id="@+id/dropdownProvincia"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:clickable="true"
+                                        android:fontFamily="@font/san_francisco"
+                                        android:inputType="none"
+                                        android:textSize="15sp" />
+                                </com.google.android.material.textfield.TextInputLayout>
+
+                            </LinearLayout>
+
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -254,10 +303,9 @@
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="10dp"
                                     android:layout_weight="1"
                                     android:hint="Departamento"
-                                    app:startIconDrawable="@drawable/ic_ubicacion">
+                                    app:startIconDrawable="@drawable/baseline_edit_location_alt_24">
 
                                     <AutoCompleteTextView
                                         android:id="@+id/dropdownDepartamento"
@@ -269,25 +317,9 @@
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
 
-                                <com.google.android.material.textfield.TextInputLayout
-                                    android:id="@+id/txtInputProvincia"
-                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:hint="Provincia"
-                                    app:startIconDrawable="@drawable/ic_ubicacion">
-
-                                    <AutoCompleteTextView
-                                        android:id="@+id/dropdownProvincia"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:clickable="true"
-                                        android:fontFamily="@font/san_francisco"
-                                        android:inputType="none"
-                                        android:textSize="15sp" />
-                                </com.google.android.material.textfield.TextInputLayout>
                             </LinearLayout>
+
+
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -299,10 +331,9 @@
                                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="10dp"
                                     android:layout_weight="1"
                                     android:hint="Distrito"
-                                    app:startIconDrawable="@drawable/ic_ubicacion">
+                                    app:startIconDrawable="@drawable/baseline_share_location_24">
 
                                     <AutoCompleteTextView
                                         android:id="@+id/dropdownDistrito"
@@ -313,6 +344,15 @@
                                         android:inputType="none"
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
+
+                            </LinearLayout>
+
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
 
                                 <com.google.android.material.textfield.TextInputLayout
                                     android:id="@+id/txtInputTelefonoU"
@@ -331,7 +371,12 @@
                                         android:inputType="number"
                                         android:textSize="15sp" />
                                 </com.google.android.material.textfield.TextInputLayout>
+
                             </LinearLayout>
+
+
+
+
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -449,7 +494,7 @@
                                     android:id="@+id/btnGuardarDatos"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="end"
+                                    android:layout_gravity="center"
                                     android:layout_marginTop="5dp"
                                     android:drawableEnd="@drawable/ic_save"
                                     android:fontFamily="@font/san_francisco"
